--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "arielmejiadev/jetbar",
+    "name": "bishwajitcadhikary/jetbar",
     "description": "It adds a sidebar dashboard theme for Laravel applications with Jetstream.",
     "keywords": [
         "arielmejiadev",
